# Biomedical_report

./: .gitignore  README.md  README_detailed.md  README_zh.md  pyproject.toml  requirements.txt
docs/: architecture.md  architecture_zh.md
reports/: sample_HER2.html  sample_HER2.md  sample_HER2_offline.html  sample_HER2_offline.md
research_intel/: __init__.py  __main__.py  app.py  cache.py  config.py  http.py  llm.py  models.py  report.py
research_intel/sources/: __init__.py  base.py  clinical_trials.py  offline.py  pubmed.py
research_intel_prototype.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pipeline.py
